# jobify-db

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  QWEN.md  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
.claude/agents/: code-reviewer.md  storage-architect.md  test-runner.md
.claude/commands/: add-storage.md  check-all.md  lint.md  test.md
.claude/rules/: queries.md  storage-impl.md  tests.md
.claude/skills/add-storage/: SKILL.md
.claude/skills/check-all/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/test/: SKILL.md
.github/copilot/: instructions.md
.github/workflows/: ci.yaml  release_pypi.yaml
.qwen/skills/add-storage/: SKILL.md
.qwen/skills/lint/: SKILL.md
.qwen/skills/review/: SKILL.md
.qwen/skills/test/: SKILL.md
.qwen/skills/typecheck/: SKILL.md
examples/: aiomysql_example.py  aiomysql_external_pool_example.py  asyncpg_example.py  asyncpg_external_pool_example.py  motor_example.py  motor_external_client_example.py  psycopg_example.py  psycopg_external_pool_example.py
src/jobify_db/: __init__.py
src/jobify_db/_internal/: _asyncpg.py  _exceptions.py  _queries.py
src/jobify_db/_internal/common/: consts.py
src/jobify_db/_internal/common/errors/: __init__.py  configuration.py  not_initialized.py  storage.py
src/jobify_db/_internal/mongodb/motor/: queries.py  storage.py
src/jobify_db/_internal/mysql/: queries.py
src/jobify_db/_internal/postgresql/: queries.py
src/jobify_db/mongodb/: motor.py
src/jobify_db/mysql/: aiomysql.py
src/jobify_db/postgresql/: asyncpg.py  psycopg.py
tests/: factories.py
tests/integration/: conftest.py  test_asyncpg_storage.py  test_motor_storage.py  test_psycopg_storage.py  test_storage.py
tests/unit/: test_aiomysql_storage.py  test_asyncpg_storage.py  test_motor_storage.py  test_psycopg_storage.py
(+6 files in other folders)
