[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/jobify_db/_version.py"

[project]
name = "jobify-db"
dynamic = ["version"]
description = "Database storage backends for the Jobify framework"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "jobify>=0.7.1",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.30"]
psycopg = ["psycopg[binary]>=3.2", "psycopg_pool>=3.2"]
motor = ["motor>=3.6"]

[project.urls]
Source = "https://github.com/C3EQUALZz/jobify-db"
Homepage = "https://github.com/C3EQUALZz/jobify-db"
Tracker = "https://github.com/C3EQUALZz/jobify-db/issues"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "prek>=0.2.5",
]
lint = [
    "bandit>=1.8.6",
    "codespell>=2.4.1",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "semgrep>=1.139.0",
    "zizmor>=1.14.2",
]
test = [
    "nox>=2025.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "testcontainers[postgres,mongo]>=4.10",
]

[tool.bandit]
skips = ["B101"]
